--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EYELIN</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
-<body>
+<body background="C:\Users\nikre\OneDrive\Документы\GitHub\-\л\фон.svg">
+
     <section class="header-section">
         <header class="nature-img">
             <nav class="nav-container">
@@ -38,7 +40,7 @@
  
         
         <div class="banner">
-            <img src="C:\Users\nikre\OneDrive\Документы\GitHub\-\л\баннер.svg" alt="" class="баннер">
+            <img src=".\-\л\баннер.svg" alt="" class="баннер">
         </div>
 
        
